[package]
name = "bytefreq-rs"
version = "0.1.0"
authors = ["minkymorgan@gmail.com"]
edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
glob = "0.3"
rand = "0.8.4"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0"
unic = "0.9"
unicode_names2 = "0.6.0"
maplit = "1.0.2"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"

[dependencies.globset]
version = "0.4"
features = ["serde"]

[dependencies.rayon]
version = "1.5"

[dependencies.walkdir]
version = "2.3"

[[bin]]
name = "bytefreq-rs"
path = "src/main.rs"

